# vocabulary

./: github.com.jczartek.Vocabulary.json  meson.build
data/: github.com.jczartek.Vocabulary.appdata.xml.in  github.com.jczartek.Vocabulary.desktop.in  github.com.jczartek.Vocabulary.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  vocabulary-application.c  vocabulary-application.h  vocabulary-window.c  vocabulary-window.h  vocabulary-window.ui  vocabulary.gresource.xml
